# pong

./: .gitignore  CMakeLists.txt  README.md  gen_srcs.py
include/: Player.h  Settings.h
src/: Ball.c  Ball.h  Paddle.c  Paddle.h  Player.c  Player.h  Settings.h  _main.c  main.c
